# liine_take_home

./: .env_docker  Dockerfile  docker-compose.yml  entrypoint.sh  pyproject.toml  readme.md
ansible/: deploy.yaml  inventory.yaml
config/: asgi.py  urls.py  wsgi.py
config/settings/: base.py
core/: models.py
etc/nginx/: liine_take_home.jinja
etc/supervisor/: gunicorn_start.sh.jinja  liine_take_home.conf.jinja
restaurants/: data.py  enums.py  filters.py  models.py  restaurants.csv  serializers.py  tests.py  views.py
restaurants/migrations/: 0001_initial.py  0002_remove_hours_exclude_overlapping_and_more.py  0003_alter_restaurant_options_and_more.py
scripts/: import_data.py
